--- a/smart_home_page.css
+++ b/smart_home_page.css
@@ -59,7 +59,7 @@ header .nav_logo:hover img {
 
 header nav {
    width: 80%;
-   margin-top: 20px;
+ 
 }
 
 header nav ul {
@@ -76,6 +76,7 @@ header nav ul li {
    align-items: center;
    justify-content: center;
    margin-left: 5px;
+   margin-top: 20px;
 }
 
 li a {
@@ -565,7 +566,7 @@ li:hover a {
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
-    /* background-color: yellow;  */
+   /* background-color: yellow;  */
    display: flex;
    align-items: center;
    justify-content: space-around;
@@ -612,9 +613,10 @@ li:hover a {
 
 @media(max-width:632px) {
    .section4 {
-    height: 1550px;
+      height: 1550px;
    }
-   .section4 .all_boxs{
+
+   .section4 .all_boxs {
       height: 1250px;
    }
 }
@@ -768,12 +770,64 @@ li:hover a {
    width: 100%;
    height: 600px;
    display: grid;
-   grid-template-columns: 400px 300px 400px;
+   grid-template-columns: 400px 300px 300px;
    column-gap: 120px;
    align-items: center;
    justify-content: center;
    position: relative;
+   /* background-color: red; */
+
 }
+
+.section5 .all_boxs {
+   width: 95%;
+   height: 600px;
+   /* background-color: yellow; */
+   display: flex;
+   align-items: center;
+   justify-content: space-around;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+}
+
+@media (max-width:975px) {
+   .section5 {
+      height: 1300px;
+   }
+
+   .section5 .all_boxs {
+      flex-wrap: wrap;
+      justify-content: space-around;
+   }
+
+   .section5 .all_boxs .box {
+      margin-top: 10px;
+   }
+
+   .section5 .section_title {
+      top: 2%;
+   }
+
+   .section5 .all_boxs {}
+}
+
+@media(max-width:632px) {
+   .section5 {
+      height: 1650px;
+   }
+
+   .section5 .all_boxs {
+      height: 1400px;
+   }
+
+   .section5 .section_title {
+      margin-top: -10%;
+      margin-left: -15%;
+   }
+}
+
 
 .section5 .section_title {
    position: absolute;
@@ -784,7 +838,8 @@ li:hover a {
    letter-spacing: 5px;
 }
 
-.section5 .box {
+.section5 .all_boxs .box {
+   width: 300px;
    height: 400px;
    outline: 2px solid rgba(0, 0, 0, 0.527);
    border-radius: 10px;
@@ -809,6 +864,7 @@ li:hover a {
    top: 10%;
    left: 20%;
    font-family: "Open Sans", sans-serif;
+   font-size: 20px;
 }
 
 .section5 .box1 p {
@@ -894,7 +950,7 @@ li:hover a {
 .section5 .box3 h1 {
    position: absolute;
    top: 10%;
-   right: 15%;
+   right: 5%;
    font-family: "Open Sans", sans-serif;
    font-size: 19px;
 }
@@ -902,9 +958,9 @@ li:hover a {
 .section5 .box3 p {
    position: absolute;
    top: 18%;
-   right: 5%;
+   right: 4%;
    font-family: "Open Sans", sans-serif;
-   font-size: 15px;
+   font-size: 12px;
 }
 
 .section5 .box3 a {
@@ -940,6 +996,7 @@ li:hover a {
    align-items: center;
    justify-content: center;
    position: relative;
+   
 }
 
 .section6 .section_title {
@@ -951,7 +1008,60 @@ li:hover a {
    letter-spacing: 5px;
 }
 
+.section6 .all_boxs{
+   width: 95%;
+   height: 600px;
+ 
+   display: flex;
+   align-items: center;
+   justify-content: space-around;
+   position: absolute;
+   top: 50%;
+   left:50%;
+   transform: translate(-50%, -50%);
+}
+@media (max-width:975px) {
+   .section6 {
+      height: 1100px;
+   }
+
+   .section6 .all_boxs {
+      flex-wrap: wrap;
+      justify-content: space-around;
+   }
+
+   .section6 .all_boxs .box {
+      margin-top: 10px;
+   }
+
+   .section6 .section_title {
+      top: 2%;
+   }
+   .section6 .section_title{
+      margin-left: -50px;
+   }
+   
+
+   .section6 .all_boxs {}
+}
+
+@media(max-width:632px) {
+   .section6 {
+      height: 1650px;
+   }
+
+   .section6 .all_boxs {
+      height: 1400px;
+   }
+   .section6 .section_title{
+      margin-left: -80px;
+   }
+
+   
+}
+
 .section6 .box {
+   width: 300px;
    height: 400px;
    outline: 2px solid rgba(0, 0, 0, 0.527);
    border-radius: 10px;
@@ -981,10 +1091,10 @@ li:hover a {
 
 .section6 .box1 p {
    position: absolute;
-   top: 18%;
+   top: 22%;
    left: 2%;
    font-family: "Open Sans", sans-serif;
-   font-size: 13px;
+   font-size: 10px;
 }
 
 .section6 .box1 a {
@@ -1062,7 +1172,7 @@ li:hover a {
 .section6 .box3 h1 {
    position: absolute;
    top: 10%;
-   right: 9%;
+   right: 0;
    font-family: "Open Sans", sans-serif;
    font-size: 19px;
 }
@@ -1070,9 +1180,9 @@ li:hover a {
 .section6 .box3 p {
    position: absolute;
    top: 18%;
-   right: 2%;
+   right: 3%;
    font-family: "Open Sans", sans-serif;
-   font-size: 15px;
+   font-size: 11px;
 }
 
 .section6 .box3 a {
@@ -1108,7 +1218,7 @@ li:hover a {
    align-items: center;
    justify-content: center;
    position: relative;
-
+   
 }
 
 .section7 .section_title {
@@ -1120,7 +1230,61 @@ li:hover a {
    letter-spacing: 5px;
 }
 
+.section7 .all_boxs{
+   width: 95%;
+  
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%,-50%);
+
+}
+
+@media (max-width:975px) {
+   .section7 {
+      height: 1500px;
+   }
+
+   .section7 .all_boxs {
+      flex-wrap: wrap;
+      justify-content: space-around;
+   }
+
+   .section7 .all_boxs .box {
+      margin-top: 10px;
+   }
+
+   .section7 .section_title {
+      top: 2%;
+   }
+   .section7 .section_title{
+      margin-left: -50px;
+   }
+   
+
+   .section7 .all_boxs {}
+}
+
+@media(max-width:632px) {
+   .section7 {
+      height: 1650px;
+   }
+
+   .section7 .all_boxs {
+      height: 1400px;
+   }
+   .section7 .section_title{
+      margin-left: -80px;
+   }
+
+   
+}
+
 .section7 .box {
+   width: 400px;
    height: 400px;
    outline: 2px solid rgba(0, 0, 0, 0.527);
    border-radius: 10px;
@@ -1136,16 +1300,16 @@ li:hover a {
    background-image: url("./Image/smart-home_page_img/camera1.png");
    background-position: 50% 75%;
    background-repeat: no-repeat;
-   background-size: 80%;
+   background-size: 70%;
    position: relative;
 }
 
 .section7 .box1 h1 {
    position: absolute;
    top: 10%;
-   left: 10%;
+   left: 27%;
    font-family: "Open Sans", sans-serif;
-
+   font-size: 15px;
 }
 
 .section7 .box1 p {
@@ -1180,14 +1344,14 @@ li:hover a {
    background-image: url("./Image/smart-home_page_img/camera2.png");
    background-position: 50% 75%;
    background-repeat: no-repeat;
-   background-size: contain;
+   background-size: 70%;
    position: relative;
 }
 
 .section7 .box2 h1 {
    position: absolute;
    top: 10%;
-   right: 1%;
+   right: 15%;
    font-family: "Open Sans", sans-serif;
    font-size: 19px;
 }
@@ -1195,7 +1359,7 @@ li:hover a {
 .section7 .box2 p {
    position: absolute;
    top: 18%;
-   right: 5%;
+   right: 18%;
    font-family: "Open Sans", sans-serif;
    font-size: 15px;
 }
@@ -1271,6 +1435,90 @@ li:hover a {
 
 
 /* ! ============ FOOTER ==================== */
+
+
+@media (max-width:1300px){
+   .footer_div .support{
+      transform: scale(0.8);
+      position: absolute;
+      top: 0;
+      left: 0;
+      line-height: 40px;
+      margin: 0;
+      padding: 0;
+   }
+   .footer_div .about_us{
+      transform: scale(0.8);
+      position: absolute;
+      top: 0;
+      left: 230px;
+      margin: 0;
+      padding: 0;
+   }  
+   .footer_div .xiaomi_projects{
+      transform: scale(0.8);
+      position: absolute;
+      top: 0;
+      left: 400px;
+      margin-top: 15px;
+      padding: 0;
+   }
+}
+
+@media (max-width:1051px){
+   .footer_div .bottom_word{
+      transform: scale(0.8) translateX(-110px);
+   }
+   .footer_ico{
+      transform: scale(0.8) translateX(100px)
+
+   }
+   .footer_subscribe{
+      transform: scale(0.8) translateX(60px)
+   }
+   
+}
+
+@media (max-width:913px){
+   .footer_div .support{
+      transform: scale(0.7) translateX(-20px) translateY(-50px);
+      position: absolute;
+      top: 0;
+      left: 0;
+      line-height: 40px;
+      margin: 0;
+      padding: 0;
+   }
+   .footer_div .about_us{
+      transform: scale(0.7) translateX(-20px) translateY(-50px);
+      position: absolute;
+      top: 0;
+      left: 230px;
+      margin: 0;
+      padding: 0;
+   }  
+   .footer_div .xiaomi_projects{
+      transform: scale(0.7) translateX(-20px) translateY(-50px);
+      position: absolute;
+      top: 0;
+      left: 400px;
+      margin-top: 15px;
+      padding: 0;
+   }
+}
+
+@media (max-width:873px){
+   .footer_div .bottom_word{
+      transform: scale(0.6) translateX(-280px);
+   }
+   .footer_ico{
+      transform: scale(0.6) translateX(200px)
+
+   }
+   .footer_subscribe{
+      transform: scale(0.6) translateX(130px)
+   }
+}
 
 footer {
    width: 100%;
@@ -1464,6 +1712,9 @@ footer .footer_div .global i {
 
 
 /* todo) RESPOSIVE */
+
+
+
 
 @media only screen and (max-width:800px) {
    header .menyu {
