--- a/login_page.css
+++ b/login_page.css
@@ -25,7 +25,7 @@ body h2{
     left: 80px;
 }
 
-div{
+.account{
     width: 450px;
     height: 550px;
     background-color: white;
@@ -35,14 +35,14 @@ div{
     position: relative;
 }
 
-h1{
+.account h1{
     margin-left: 180px;
     margin-top: 80px;
     display: inline-block;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-div input{
+.account input{
     width: 70%;
     height: 10%;
     margin-left: 15%;
@@ -52,20 +52,20 @@ div input{
     border-radius: 10px;
 }
 
-div input:hover{
+.account input:hover{
     background-color: rgb(204, 204, 204);
 }
 
-div .checkbox{
+.account .checkbox{
     width: 20px;
     margin-top: 1px;
 }
 
-div .checkbox:hover{
+.account .checkbox:hover{
     cursor: pointer;
 }
 
-div .checkbox_name{
+.account .checkbox_name{
     position: absolute;
     top: 62%;
     left: 22%;
@@ -73,7 +73,7 @@ div .checkbox_name{
 
 }
 
-div button{
+.account button{
     width: 300px;
     height: 60px;
     background-color: orangered;
@@ -88,7 +88,7 @@ div button{
     left: 17%;
 }
 
-div button:hover{
+.account button:hover{
     color: black;
     cursor: pointer;
 }
